--- a/sass/components/_benefits.scss
+++ b/sass/components/_benefits.scss
@@ -15,7 +15,7 @@
     border-radius: 4px;
   }
 
-  @media screen and (min-width: 786px) {
+  @media screen and (min-width: 768px) {
     width: 354px;
     height: 120px;
     display: flex;
@@ -39,22 +39,22 @@
 }
 
 .benefits__card {
-  @media screen and (min-width: 480px) {
-    margin-bottom: var(--card-set-gap);
-    flex-basis: calc(100% / 4 - var(--card-set-gap));
-    // margin-left: var(--card-set-gap);
+  margin-left: var(--card-set-gap);
+  margin-bottom: var(--card-set-gap);
+  flex-basis: calc(100% / 4 - var(--card-set-gap));
+  
+  @media screen and (max-width: 480px) {
+
+    margin-left: 0;
   }
-  @media screen and (min-width: 786px) {
-    flex-basis: calc(100% / 4 - var(--card-set-gap));
-    margin-bottom: var(--card-set-gap);
-     margin-left: var(--card-set-gap);
-    &:nth-child(2n+1) {
+  @media screen and (max-width: 768px) {
+
+    &:nth-child(2n + 1) {
       margin-left: 0;
-      }
+    }
   }
   @media screen and (min-width: 1200px) {
-    flex-basis: calc(100% / 4 - var(--card-set-gap));
-    margin-left: var(--card-set-gap);
+    margin-bottom: 0;
   }
 }
 
@@ -63,8 +63,8 @@
     //  margin-left: calc(-1 * var(--card-set-gap));
   }
   @media screen and (min-width: 768px) {
-     display: flex;
-     flex-wrap: wrap;
+    display: flex;
+    flex-wrap: wrap;
     //  margin-left: calc(-1 * var(--card-set-gap));
   }
   @media screen and (min-width: 1200px) {
@@ -74,35 +74,16 @@
 }
 
 .benefits__title {
-  @media screen and (min-width: 480px) {
-    padding-bottom: 10px;
-    font-weight: 700;
-    font-size: 14px;
-    line-height: calc(16 / 14);
-    letter-spacing: 0.03em;
+  padding-bottom: 10px;
+  font-weight: 700;
+  font-size: 14px;
+  line-height: calc(16 / 14);
+  letter-spacing: 0.03em;
+  text-transform: uppercase;
+  color: var(--secondary-title-color);
+
+  @media screen and (max-width: 480px) {
     text-align: center;
-    text-transform: uppercase;
-    color: var(--secondary-title-color);
-  }
-
-  @media screen and (min-width: 786px) {
-    padding-bottom: 10px;
-    font-weight: 700;
-    font-size: 14px;
-    line-height: calc(16 / 14);
-    letter-spacing: 0.03em;
-    text-transform: uppercase;
-    color: var(--secondary-title-color);
-  }
-
-  @media screen and (min-width: 1200px) {
-    padding-bottom: 10px;
-    font-weight: 700;
-    font-size: 14px;
-    line-height: calc(16 / 14);
-    letter-spacing: 0.03em;
-    text-transform: uppercase;
-    color: var(--secondary-title-color);
   }
 }
 
