--- a/sass/components/_btn.scss
+++ b/sass/components/_btn.scss
@@ -22,4 +22,13 @@
     &:focus {
      background-color: var(--btn-hover-focus-color);
         }
+
+                 @media screen and (min-width: 480px) {
+                    padding: 10px 24px;
+                
+                 }
+        
+                 @media screen and (min-width: 768px) {
+                    padding: 10px 24px;
+                 }
 }
