--- a/sass/components/_header.scss
+++ b/sass/components/_header.scss
@@ -17,8 +17,10 @@
         padding-top: 16px;
         padding-bottom: 16px;
     }
-         @media screen and (min-width:786px) {
-             
+         @media screen and (min-width:768px) {
+            padding-top: 26px;
+                padding-bottom: 26px;
+                margin-right: 87px;
          }
                   @media screen and (min-width:1200px) {
                     margin-right: 91px;
@@ -29,12 +31,14 @@
 
 .header__list {
 
-    @media screen and (min-width:480px) {
+    @media screen and (max-width:480px) {
             display: none;
         }
     
-        @media screen and (min-width:480px) {
-            display: none;
+        @media screen and (max-width:768px) {
+                  margin-left: auto;
+                display: flex;
+                flex-direction: column;
         }
     
         @media screen and (min-width:1200px) {
