--- a/sass/components/_hero.scss
+++ b/sass/components/_hero.scss
@@ -1,34 +1,81 @@
-
 .hero {
-    background-color: var(--background-color-black);
-    padding-top: 200px;
-    padding-bottom: 200px;
+  background-color: var(--background-color-black);
+  padding-top: 200px;
+  padding-bottom: 200px;
+
+   @media screen and (max-width: 480px) {
+    padding-top: 118px;
+        padding-bottom: 118px;
+   }
+
+    @media screen and (max-width: 768px) {
+        padding-top: 118px;
+            padding-bottom: 118px;
+    }
+
 }
+
+
 
 .hero__overlay {
-    max-width: 1600px;
-    height: 600px;
-    margin-left: auto;
-    margin-right: auto;
-    background-image: linear-gradient(to right,
-            rgba(47, 48, 58, 0.4),
-            rgba(47, 48, 58, 0.4)),
-        url(../img/hero/Img.jpg);
-    background-position: center;
-    background-repeat: no-repeat;
-    background-size: cover;
+  @media screen and (max-width: 480px) {
+    max-width: 480px;
+    height: 400px;
+    background-image: linear-gradient(
+        to right,
+        rgba(47, 48, 58, 0.4),
+        rgba(47, 48, 58, 0.4)
+      ),
+      url();
+  }
+
+  @media screen and (max-width: 768px) {
+    max-width: 768px;
+    height: 400px;
+    background-image: linear-gradient(
+        to right,
+        rgba(47, 48, 58, 0.4),
+        rgba(47, 48, 58, 0.4)
+      ),
+      url();
+  }
+
+  max-width: 1600px;
+  height: 600px;
+  margin-left: auto;
+  margin-right: auto;
+  background-image: linear-gradient(
+      to right,
+      rgba(47, 48, 58, 0.4),
+      rgba(47, 48, 58, 0.4)
+    ),
+    url(../img/hero/Img.jpg);
+  background-position: center;
+  background-repeat: no-repeat;
+  background-size: cover;
 }
 
-
 .hero__title {
-    margin: 0 auto;
-    margin-bottom: 30px;
-    width: 696px;
-    font-weight: 900;
-    font-size: 44px;
-    line-height: calc(60 / 44);
-    text-align: center;
-    letter-spacing: 0.06em;
-    text-transform: uppercase;
-    color: var(--main-title-color);
+  margin: 0 auto;
+  margin-bottom: 30px;
+  width: 696px;
+  font-weight: 900;
+  font-size: 44px;
+  line-height: calc(60 / 44);
+  text-align: center;
+  letter-spacing: 0.06em;
+  text-transform: uppercase;
+  color: var(--main-title-color);
+
+  @media screen and (max-width: 480px) {
+    width: 360px;
+    font-size: 26px;
+    line-height: calc(42 / 26);
+  }
+
+  @media screen and (max-width: 768px) {
+    width: 360px;
+    font-size: 26px;
+    line-height: calc(42 / 26);
+  }
 }
