--- a/sass/components/_nav.scss
+++ b/sass/components/_nav.scss
@@ -1,11 +1,14 @@
 
 .nav__list {
 
-    @media screen and (min-width:480px)  {
+    @media screen and (max-width:480px)  {
         display: none;
     }
-          @media screen and (min-width:480px) {
-              display: none;
+          @media screen and (max-width:768px) {
+            display: flex;
+                gap: 50px;
+                align-items: center;
+                
           }
                         @media screen and (min-width:1200px) {
                             display: flex;
@@ -39,6 +42,22 @@
             color: var(--accent-color);
         }
 
+                 @media screen and (max-width:480px) {
+                     display: none;
+                 }
+        
+                 @media screen and (max-width:768px) {
+                    padding-top: 0;
+                        padding-bottom: 0;
+                       
+
+                    
+                 }
+        
+                 @media screen and (min-width:1200px) {
+                     
+                 }
+
 }
 
 .link.current::after {
@@ -54,6 +73,10 @@
     border-radius: 2px;
 
     background-color: var(--accent-color);
+
+    @media screen and (max-width:768px) {
+       
+}
 }
 
 
@@ -68,6 +91,13 @@
     line-height: calc(16 / 14);
     letter-spacing: 0.02em;
     color: var(--description-color);
+
+    @media screen and (max-width:768px) {
+            font-weight: 500;
+                font-size: 12px;
+                line-height: 14px;
+                margin-bottom: 10px;
+    }
 }
 
 .header__tel {
@@ -76,9 +106,36 @@
     line-height: calc(16 / 14);
     letter-spacing: 0.02em;
     color: var(--description-color);
+
+    @media screen and (max-width:768px) {
+        font-weight: 500;
+            font-size: 12px;
+            line-height: 14px;
+     }
 }
 
-.header__icon {
+.header__icon-mail {
     fill: currentColor;
     margin-right: 10px;
+
+    @media screen and (max-width:768px) {
+            margin-right: 8px;
+            width: 14px;
+            height: 10px;
+        }
+
+}
+
+.header__icon-tel {
+    fill: currentColor;
+    margin-right: 10px;
+
+    @media screen and (max-width:768px) {
+        margin-right: 8px;
+        width: 10px;
+        height: 14px;
+
+
+    }
+
 }
