--- a/sass/components/_staff.scss
+++ b/sass/components/_staff.scss
@@ -3,19 +3,32 @@
 }
 
 .staff__title {
-  margin-bottom: 50px;
-  font-weight: 700;
-  font-size: 36px;
-  line-height: calc(42 / 36);
-  letter-spacing: 0.03em;
-  color: var(--secondary-title-color);
+  margin-bottom: 30px;
+ font-weight: 700;
+  font-size: 28px;
+  line-height: 33px;
   text-align: center;
+  letter-spacing: 0.03em;
+
+  color: #212121;
+
+  @media screen and (min-width: 1200px) {
+        margin-bottom: 50px;
+          font-weight: 700;
+          font-size: 36px;
+          line-height: calc(42 / 36);
+          letter-spacing: 0.03em;
+          color: var(--secondary-title-color);
+          text-align: center;
+    }
 }
 
 .staff__list {
   @media screen and (min-width: 480px) {
   }
   @media screen and (min-width: 786px) {
+    display: flex;
+      flex-wrap: wrap;
   }
   @media screen and (min-width: 1200px) {
     display: flex;
@@ -24,23 +37,34 @@
 }
 
 .staff__card {
-    @media screen and (min-width: 480px) {}
+  margin-left: var(--card-set-gap);
+  margin-bottom: var(--card-set-gap);
+  flex-basis: calc(100% / 4 - var(--card-set-gap));
+      background-color: var(--main-title-color);
+        box-shadow: 0px 1px 3px rgba(0, 0, 0, 0.12), 0px 1px 1px rgba(0, 0, 0, 0.14),
+          0px 2px 1px rgba(0, 0, 0, 0.2);
+    @media screen and (max-width: 480px) {
+      
+    }
     
         @media screen and (min-width: 786px) {}
     
         @media screen and (min-width: 1200px) {
-            flex-basis: calc(100% / 4 - var(--card-set-gap));
-                margin-left: var(--card-set-gap);
-                background-color: var(--main-title-color);
-                box-shadow: 0px 1px 3px rgba(0, 0, 0, 0.12), 0px 1px 1px rgba(0, 0, 0, 0.14),
-                    0px 2px 1px rgba(0, 0, 0, 0.2);
+           
             };
         }
 
 
 .staff__wrapper {
-  padding-top: 30px;
-  padding-bottom: 30px;
+    padding-top: 30px;
+      padding-bottom: 24px;
+  
+    @media screen and (min-width: 1200px) {
+      padding-top: 30px;
+        padding-bottom: 30px;
+    }
+  
+    
 }
 
 .staff__name {
