--- a/sass/components/_works.scss
+++ b/sass/components/_works.scss
@@ -8,11 +8,11 @@
 //  }
 
   .works{
-    @media screen and (min-width:480px) {
-            // display: none;
+    @media screen and (max-width:480px) {
+            display: none;
         }
-                 @media screen and (min-width:786px) {
-                    //  display: none;
+                 @media screen and (max-width:786px) {
+                 display: none;
                  }
                                  
   }
