--- a/sass/components/_hero.scss
+++ b/sass/components/_hero.scss
@@ -3,19 +3,16 @@
   padding-top: 200px;
   padding-bottom: 200px;
 
-   @media screen and (max-width: 480px) {
+  @media screen and (max-width: 480px) {
     padding-top: 118px;
-        padding-bottom: 118px;
-   }
+    padding-bottom: 118px;
+  }
 
-    @media screen and (max-width: 768px) {
-        padding-top: 118px;
-            padding-bottom: 118px;
-    }
-
+  @media screen and (max-width: 768px) {
+    padding-top: 118px;
+    padding-bottom: 118px;
+  }
 }
-
-
 
 .hero__overlay {
   @media screen and (max-width: 480px) {
@@ -26,7 +23,16 @@
         rgba(47, 48, 58, 0.4),
         rgba(47, 48, 58, 0.4)
       ),
-      url();
+      url(../img/hero/img_s@1x.jpg);
+
+    @media (min-device-pixel-ratio: 2),
+      (min-resolution: 192dpi),
+      (min-resolution: 2dppx) {
+        background-image: linear-gradient(to right,
+              rgba(47, 48, 58, 0.4),
+              rgba(47, 48, 58, 0.4)),
+            url(../img/hero/img_s@2x.jpg);
+    }
   }
 
   @media screen and (max-width: 768px) {
@@ -37,7 +43,16 @@
         rgba(47, 48, 58, 0.4),
         rgba(47, 48, 58, 0.4)
       ),
-      url();
+      url(../../img/hero/img_m@1x.jpg);
+
+      @media (min-device-pixel-ratio: 2),
+        (min-resolution: 192dpi),
+        (min-resolution: 2dppx) {
+          background-image: linear-gradient(to right,
+              rgba(47, 48, 58, 0.4),
+              rgba(47, 48, 58, 0.4)),
+            url(../img/hero/img_m@2x.jpg);
+        }
   }
 
   max-width: 1600px;
@@ -49,7 +64,15 @@
       rgba(47, 48, 58, 0.4),
       rgba(47, 48, 58, 0.4)
     ),
-    url(../img/hero/Img.jpg);
+    url(../img/hero/Img_l@1x.jpg);
+         @media (min-device-pixel-ratio: 2),
+         (min-resolution: 192dpi),
+         (min-resolution: 2dppx) {
+           background-image: linear-gradient(to right,
+               rgba(47, 48, 58, 0.4),
+               rgba(47, 48, 58, 0.4)),
+             url(../img/hero/img_l@2x.jpg);
+         }
   background-position: center;
   background-repeat: no-repeat;
   background-size: cover;
