--- a/sass/components/_staff.scss
+++ b/sass/components/_staff.scss
@@ -24,14 +24,15 @@
 }
 
 .staff__list {
+  display: flex;
   @media screen and (min-width: 480px) {
   }
-  @media screen and (min-width: 786px) {
-    display: flex;
+  @media screen and (max-width: 786px) {
+    
       flex-wrap: wrap;
   }
   @media screen and (min-width: 1200px) {
-    display: flex;
+    
     margin-left: calc(-1 * var(--card-set-gap));
   }
 }
@@ -47,7 +48,9 @@
       
     }
     
-        @media screen and (min-width: 786px) {}
+        @media screen and (max-width: 786px) {
+          flex-basis: calc(100% / 2 - var(--card-set-gap));
+        }
     
         @media screen and (min-width: 1200px) {
            
